crates/php-parser/tests/snapshots/string_interpolation_tests__multiple_variables_in_string.snap
---
source: tests/string_interpolation_tests.rs
assertion_line: 223
expression: program
---
Program {
    statements: [
        Nop {
            span: Span {
                start: 0,
                end: 6,
            },
        },
        Echo {
            exprs: [
                InterpolatedString {
                    parts: [
                        Variable {
                            name: Span {
                                start: 12,
                                end: 14,
                            },
                            span: Span {
                                start: 12,
                                end: 14,
                            },
                        },
                        String {
                            value: [
                                32,
                            ],
                            span: Span {
                                start: 14,
                                end: 15,
                            },
                        },
                        Variable {
                            name: Span {
                                start: 15,
                                end: 17,
                            },
                            span: Span {
                                start: 15,
                                end: 17,
                            },
                        },
                        String {
                            value: [
                                32,
                            ],
                            span: Span {
                                start: 17,
                                end: 18,
                            },
                        },
                        Variable {
                            name: Span {
                                start: 18,
                                end: 20,
                            },
                            span: Span {
                                start: 18,
                                end: 20,
                            },
                        },
                        String {
                            value: [
                                32,
                            ],
                            span: Span {
                                start: 20,
                                end: 21,
                            },
                        },
                        Variable {
                            name: Span {
                                start: 21,
                                end: 23,
                            },
                            span: Span {
                                start: 21,
                                end: 23,
                            },
                        },
                    ],
                    span: Span {
                        start: 11,
                        end: 24,
                    },
                },
            ],
            span: Span {
                start: 6,
                end: 26,
            },
        },
    ],
    errors: [],
    span: Span {
        start: 0,
        end: 26,
    },
}
